# wgpu-practice

./: Cargo.toml  Readme.md  build.rs  scene.rs
src/: camera.rs  light.vert  light.vert.spv  main.rs  model.rs  scene.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  texture.rs
src/renderer/: instance.rs  light.rs  material.rs  mod.rs  model.rs  resource.rs  texture.rs
src/renderer/shader_src/: light.frag  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/scene/: mod.rs  scenenode.rs
