[package]
name = "wgpu-practice"
version = "0.1.0"
authors = ["siemenkraayenbrink"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = {version = "0.22", features=["web-sys"]}
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.8.1"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ]}
anyhow = "1.0"
gltf = "0.15"
console_log = "0.2"

[build-dependencies]
anyhow = "1.0"
shaderc = "0.7"
fs_extra = "1.1"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
package = "web-sys"
version = "0.3.22"
features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent',
]
[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.45"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2"